loopfor.LoopFor.scala.error
Compilation error:
LoopFor:5: error: not found: value pickUpBaggle
pickUpBaggle();
^