loopfor.LoopFor.scala.code
var nbSteps:Int = 0;
while(!isOverBaggle()){
  forward();
}
pickUpBaggle();
for (stepper <- 1 to nbSteps){
  backward();
}
dropBaggle();